--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html, body {
 	font-size: 20px;
 	font-family: sans-serif;
 	color: #393939;
+    background-color: rgb(228, 221, 218);
 }
 
 body {
