--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ header img{
 html, body {
 	font-size: 20px;
 	font-family: sans-serif;
-	color: #393939;
-    background-color: rgb(49, 46, 46);
+	color: #0f0e0e;
+    background-color: rgba(9, 10, 9, 0.466);
 }
 
 body {
