--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ body {
     font-size: 18px;
     line-height: 25px;
     margin-top: 10px;
-    text-align: center;
+    text-align: left;
 }
 
 .item-list {
