--- a/de12/css main/style.css
+++ b/de12/css main/style.css
@@ -46,9 +46,7 @@ body {
     font-weight: bold;
 }
 
-.main {
-    align-items: center;
-}
+
 
 .contents {
     font-family: 'Zen Maru Gothic', sans-serif;
@@ -61,7 +59,7 @@ body {
 .contents h2::after {
     content: '';
     display: block;
-    width: 36px;
+    width: 50px;
     height: 3px;
     background-color: black;
     margin-top: 20px;
@@ -69,16 +67,6 @@ body {
     margin-right: auto;
 }
 
-
-
-.list {
- 
-    width: 300px;
-    height: 200px;
-    
-   
-
-}
 
 
 
@@ -90,8 +78,15 @@ body {
     
   }
  ul li, ol li {
-    line-height: 1.5;
+    line-height: 0.5;
     padding: 0.5em 0;
     
+    }
+
+  .list {
+    display: flex;
+    justify-content: center;
+   font-size: 25px;
     
   }
+  
