--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,54 @@ body {
     padding-bottom: 80px;
     color: #000;
     font-weight: bold;
-    text-shadow: 1px 1px 10px #eee9e0;
     font-size: 39px;
     line-height: 115px;
 }
 
+.fade-text{
+    display: block;
+    color: transparent;
+    font-size: 39px;
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-size: 300% 300%;
+  }
 
+  .fade-text.to__right {
+    background-image: linear-gradient(to right, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0) 60%);
+    background-position: left 100% center;
+    transform: translate(-20px, 0);
+    -webkit-animation: toRight var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+            animation: toRight var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+  }
+
+  @keyframes toRight {
+    100% {
+      transform: translate(0, 0);
+      background-position: left 0% center;
+    }
+  }
+
+  .fade-text.to__left {
+    background-image: linear-gradient(to left, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0) 60%);
+    background-position: right 100% center;
+    transform: translate(-20px, 0);
+    -webkit-animation: toLeft var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+            animation: toLeft var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+  }
+
+  @keyframes toLeft {
+    100% {
+      transform: translate(0, 0);
+      background-position: right 0% center;
+    }
+  }
+
+.person {
+    text-align: right;
+    
+    font-family: 'Oooh Baby', cursive;
+}
 .lead {
     max-width: 1200px;
     margin: 70px auto;
