--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
     margin-right: auto;
     padding-left: 40px;
     padding-bottom: 80px;
-    color: #000;
+    color: rgb(5, 5, 5);
     font-weight: bold;
     font-size: 39px;
     line-height: 115px;
@@ -95,7 +95,7 @@ body {
   }
 
   .fade-text.to__left {
-    background-image: linear-gradient(to left, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0) 60%);
+    background-image: linear-gradient(to left, rgb(92, 89, 89) 30%, rgba(0, 0, 0, 0) 60%);
     background-position: right 100% center;
     transform: translate(-20px, 0);
     -webkit-animation: toLeft var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
@@ -111,7 +111,7 @@ body {
 
 .person {
     text-align: right;
-    
+    color: rgb(236, 233, 233);
     font-family: 'Oooh Baby', cursive;
 }
 .lead {
