--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,14 @@ body {
  }
 
  .first-view-text {
-    font-family: 'Zen Maru Gothic', sans-serif;
+    font-family: 'Zen Old Mincho', serif;
     font-weight: bold;
  }
 .item-list {
     font-family: 'Zen Maru Gothic', sans-serif;
 }
 .contents {
-    font-family: 'Zen Maru Gothic', sans-serif;
+    font-family: 'Zen Old Mincho', serif;
 }
 
 
