--- a/de12/css homework/style.css
+++ b/de12/css homework/style.css
@@ -69,3 +69,8 @@ p{
     margin: 0;
     padding: 100px;
 }
+
+.street-text {
+    font-size: 18px;
+    font-family: 'Zen Maru Gothic', sans-serif;
+}
