--- a/digi_fab/css.homework/style.css
+++ b/digi_fab/css.homework/style.css
@@ -24,70 +24,68 @@ logotohome img{
 body {
     margin: 0px;
     padding: 0px;
-    background-color: rgba(241, 221, 176, 0.363);
+    background-color: rgba(238, 233, 221, 0.363);
+}
+  h2 {
+    margin-top: 50px;
+  }
+
+  .header-de12 {
+    width: auto;
+    text-align: center;
+    background-color: rgba(240, 226, 195, 0.527);
+}
+
+.header-text {
+    font-size: 16px;
+	font-family: sans-serif;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 60px;
+}
+
+.main-de12 {
+    background-color: #f1ddc15b;
+    margin: 0;
+    padding: 100px;
+}
+
+.street-text {
+    font-size: 18px;
+    font-family: 'Zen Maru Gothic', sans-serif;
+}
+
+.number {
+    text-align: center;
+}
+
+.main-digi {
+    text-align: center;
+}
+.boutou {
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 .title {
-    height: 310px;
-    background-image: url(../images/keyvisual-750x370-wide.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    text-shadow: 1px 1px 10px #000000;
-}
-
-.title h1 {
-    font-family: 'Zen Maru Gothic', sans-serif;
-    font-size: 60px;
-    font-weight: bold;
-}
-
-
-
-.contents {
-    font-family: 'Zen Maru Gothic', sans-serif;
-    padding-top: 80px;
-    font-size: 20px;
-    text-align: center;
+    font-size: 30px;
     
 }
-
-.contents h2::after {
-    content: '';
-    display: block;
-    width: 50px;
-    height: 3px;
-    background-color: black;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
+.so-difficult {
+    font-size: 50px;
+    margin-top: 500px;
+    margin-bottom: 400px;
+}
+.study {
+    font-size: 40px;
+    margin-top: 85px;
+    margin-bottom: 30px;
 }
 
+.title2 {
+    font-size: 30px;
+}
 
-
-
- ul, ol {
-    background: #fffcf4;
-    border-radius :8px;/*角の丸み*/
-    box-shadow :0px 0px 5px silver;/*5px=影の広がり具合*/
-    padding: 0.5em 0.5em 0.5em 2em;
-    
-  }
- ul li, ol li {
-    line-height: 0.5;
-    padding: 0.5em 0;
-    
-    }
-
-  .list {
-    display: flex;
-    justify-content: center;
-   font-size: 25px;
-    
-  }
-  
-
+h1 {
+    margin-top: 50px;
+}
