--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
  }
 
  .first-view-text {
-    font-family: 'Zen Old Mincho', serif;
+    font-family: 'Zen Kaku Gothic New', sans-serif;
     font-weight: bold;
  }
 .item-list {
@@ -280,7 +280,6 @@ img[src="./de12/images/step05.png"] {
         text-align: center;
         margin-top: 300px;
         font-size: 80px;
-        font-weight: bold;
         color: #000000;
         padding-left: 20px;
         padding-right: 20px;
