--- a/de12/css homework/style.css
+++ b/de12/css homework/style.css
@@ -78,3 +78,16 @@ p{
 .number {
     text-align: center;
 }
+
+.result {
+    margin-top: 100px;
+    margin-bottom: 50px;
+
+}
+
+.mainread {
+    font-weight: bold;
+}
+
+
+
