--- a/digi_fab/css.homework/style.css
+++ b/digi_fab/css.homework/style.css
@@ -21,19 +21,39 @@ logotohome img{
 
 
 /* ========== common ========== */
-body {
+html, body {
     margin: 0px;
     padding: 0px;
-    background-color: rgba(238, 233, 221, 0.363);
-}
-  h2 {
-    margin-top: 50px;
-  }
+    background-color: #ffffff86;
+	
 
-  .header-de12 {
+}
+h1{
+    text-indent: 0em;
+}
+h2{
+    margin-left: 1em;
+    margin-top: 1em;
+}
+h3{
+    margin-left: 2em;
+}
+div{
+    margin-top: 1em;
+    margin-left: 3em;
+
+}
+p{
+    margin-left: 3em;
+}
+
+
+
+.header-de12 {
     width: auto;
-    text-align: center;
-    background-color: rgba(240, 226, 195, 0.527);
+    height: 120px;
+    
+    background-color: rgb(255, 255, 255);
 }
 
 .header-text {
@@ -59,34 +79,15 @@ body {
     text-align: center;
 }
 
-.main-digi {
-    text-align: center;
-}
-.boutou {
-    margin-top: 200px;
-    margin-bottom: 200px;
+.result {
+    margin-top: 100px;
+    margin-bottom: 50px;
+
 }
 
-.title {
-    font-size: 30px;
-    
-}
-.so-difficult {
-    font-size: 50px;
-    margin-top: 500px;
-    margin-bottom: 400px;
-}
-.study {
-    font-size: 40px;
-    margin-top: 85px;
-    margin-bottom: 30px;
+.mainread {
+    font-weight: bold;
 }
 
-.title2 {
-    font-size: 30px;
-}
 
-h1 {
-    margin-top: 50px;
-}
 
