--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,13 @@ html, body {
 	font-size: 20px;
 	font-family: sans-serif;
 	color: #0f0e0e;
-    background-color: rgba(197, 196, 159, 0.233);
+    background-color: rgb(255, 255, 255);
 }
 
 body {
     margin: 0;
     padding: 0;
-    margin-bottom: 8000px;
+    margin-bottom: 3000px;
  }
 
  .first-view-text {
@@ -97,7 +97,7 @@ body {
   }
 
   .fade-text.to__left {
-    background-image: linear-gradient(to left, rgb(92, 89, 89) 30%, rgba(0, 0, 0, 0) 60%);
+    background-image: linear-gradient(to left, rgb(19, 18, 18) 30%, rgba(0, 0, 0, 0) 60%);
     background-position: right 100% center;
     transform: translate(-20px, 0);
     -webkit-animation: toLeft var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
@@ -113,7 +113,7 @@ body {
 
 .person {
     text-align: right;
-    color: rgb(236, 233, 233);
+    color: rgb(19, 17, 17);
     font-family: 'Oooh Baby', cursive;
 }
 .lead {
@@ -129,7 +129,7 @@ body {
     font-family: 'Zen Maru Gothic', sans-serif;
 }
 .contents {
-    background-color: rgba(211, 203, 186, 0.596);
+
     padding-top: 100px;
     padding-bottom: 10px;
     font-family: 'Montserrat', sans-serif;
@@ -402,12 +402,37 @@ img[src="./de12/images/step05.png"] {
             padding-top: 700px;
             
         }
+        .area1text {
+          padding-top: 200px;
+          height: 1px;
+          width: 1px;
+
+        }
         
+      .de12img {
+        border-radius: 10px;
+        height: 500px;
+      }
+
+      .defaimg {
+        border-radius: 10px;
+        height: 400px;
+      }
 
 
         .area2 {
-            margin-top: 100px;
+            margin-top: 1px;
         }
+
+        .defaarea {
+          height: 300px;
+        }
+
+        .luxy-el {
+          height: 150px;
+        }
+
+        
           .area{
             position:relative;
             margin:0 auto 20% auto;
