--- a/css/style.css
+++ b/css/style.css
@@ -415,8 +415,9 @@ img[src="./de12/images/step05.png"] {
       }
 
       .defaimg {
-        border-radius: 10px;
+        border-radius: 50px;
         height: 400px;
+        width: 1000px;
       }
 
 
