--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,18 @@ body {
 }
 .contents {
     font-family: 'Zen Old Mincho', serif;
-    
+    text-align: center;
+}
+
+.line ::after {
+  content: '';
+  display: block;
+  width: 660px;
+  height: 3px;
+  background-color: black;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -140,7 +151,7 @@ body {
 
 
 
-/*contentsフェードインここから*/
+/*contentsフェードインここから　（中止）*/
 
 .slide-in {
 	overflow: hidden;
