--- a/css/style.css
+++ b/css/style.css
@@ -270,66 +270,7 @@ img[src="./de12/images/step05.png"] {
     border-radius: 20%;
 }
 
-@media (max-width: 800px) {
-    .header img {
-        margin-left: 5px;
-        width: 50px;
-        height: 50px;
-    }
-.first-view {
-        height:100vh;
-        background-image: url(../de12/images/24744505_m\ -\ コピー.jpg);
-        align-items: flex-start;
-    }
-.first-view-text {
-    padding-top: 140px;
-    padding-left: 20px;
-}
-.first-view-text h1 {
-    font-size: 30px;
-    line-height: 40px;
-}
-.first-view-text p {
-    font-size: 18px;
-    margin-top: 1px;
-    
-}
 
-
-
-.animation {
-    text-align: center;
-    font-weight: bold;
-    color: #000000;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-family: 'Zen Maru Gothic', sans-serif;
-    font-size: 20px;
-    }
-.lead {
-    padding-left: 20px;
-    padding-right: 20px;
-    font-family: 'Zen Maru Gothic', sans-serif;
-    font-size: 18px;
-}
-.lead p {
-    text-align: left;
-    font-size: px;
-}
-.item-list {
-    display: flex;
-    padding-top: 40px;
-    padding-bottom: 10px;
-    padding-left: 40px;
-    padding-right: 60px;
-    overflow: scroll;
-}
-
-.slide-in_inner {
-    font-size: 50px;
-}
-}
-   
 
 .header {
         animation: top-in-basic 1 0.4s 0s;
@@ -534,3 +475,85 @@ img[src="./de12/images/step05.png"] {
           }
           
           }
+
+
+
+
+/*スマホ画面*/
+
+
+
+
+
+@media (max-width: 800px) {
+  .header img {
+      margin-left: 5px;
+      width: 50px;
+      height: 50px;
+  }
+.first-view {
+      height:100vh;
+      background-image: url(../de12/images/24744505_m\ -\ コピー.jpg);
+      align-items: flex-start;
+  }
+.first-view-text {
+  padding-top: 140px;
+  padding-left: 20px;
+}
+.first-view-text h1 {
+  font-size: 30px;
+  line-height: 40px;
+}
+.first-view-text p {
+  font-size: 18px;
+  margin-top: 1px;
+  
+}
+
+
+
+.animation {
+  text-align: center;
+  font-weight: bold;
+  color: #000000;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-family: 'Zen Maru Gothic', sans-serif;
+  font-size: 20px;
+  }
+.lead {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-family: 'Zen Maru Gothic', sans-serif;
+  font-size: 18px;
+}
+.lead p {
+  text-align: left;
+  font-size: px;
+}
+.item-list {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 60px;
+  overflow: scroll;
+}
+
+.slide-in_inner {
+  font-size: 50px;
+}
+
+.line ::after {
+content: '';
+display: block;
+width: 100px;
+height: 3px;
+background-color: black;
+margin-top: 20px;
+margin-left: auto;
+margin-right: auto;
+}
+}
+ 
+/*ここまで*/
