--- a/digi_fab/css.homework/style.css
+++ b/digi_fab/css.homework/style.css
@@ -25,6 +25,7 @@ html, body {
     margin: 0px;
     padding: 0px;
     background-color: #ffffff86;
+    font-family: 'Zen Maru Gothic', sans-serif;
 	
 
 }
