--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,18 @@ img[src="./de12/images/step05.png"] {
         width: 1000px;
       }
 
+      .de34img {
+        border-radius: 90px;
+        height: 500px;
+        width: 600px;
+      }
+
+      .de56img {
+        border-radius: 120px;
+        height: 500px;
+        width: 600px;
+      }
+
 
         .area2 {
             margin-top: 1px;
