--- a/css/style.css
+++ b/css/style.css
@@ -412,14 +412,14 @@ body {
 
 
 
-.animation {
+#animation {
   text-align: center;
   font-weight: bold;
   color: #000000;
   padding-left: 20px;
   padding-right: 20px;
   font-family: 'Zen Maru Gothic', sans-serif;
-  font-size: 20px;
+  font-size: 40px;
   }
 .lead {
   padding-left: 20px;
