--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .logo img {
     border-radius: 50%;
     width: 150px;
-    height: 150px;
+    height: 150px;/* 画像のトリミング */
     object-fit: cover; /* 画像のトリミング */
 }
 
