--- a/de56/de56css/style.css
+++ b/de56/de56css/style.css
@@ -29,7 +29,7 @@ body {
 
 .title {
     height: 310px;
-    background-image: url(/de56/images/DALL·E\ 2023-10-24\ 16.54.09\ -\ render\ with\ a\ surrealistic\ touch\ showing\ a\ diverse\ group\ of\ business\ people\ having\ a\ meeting\ on\ giant\ floating\ calculators\ amidst\ a\ dreamy\,\ design-ori\ \(小\).png);
+    background-image: url(/de56/images/DALL·E\ 2023-10-24\ 16.54.09.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
