--- a/de56/de56css/style.css
+++ b/de56/de56css/style.css
@@ -29,7 +29,7 @@ body {
 
 .title {
     height: 310px;
-    background-image: url(/de56/images/DALL·E\ 2023-10-24\ 16.54.09.png);
+    background-image: url(../images/1111204.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
