--- a/cheatclass/css/chstyle.css
+++ b/cheatclass/css/chstyle.css
@@ -21,3 +21,9 @@ textarea {
 button {
   margin: 10px 0; /* 上下のマージン */
 }
+
+#copy-btn {
+  padding: 10px;
+  margin-top: 10px;
+  font-size: 16px;
+}
