--- a/doyolab/doyolab.css/style.css
+++ b/doyolab/doyolab.css/style.css
@@ -29,7 +29,7 @@ body {
 
 .title {
     height: 310px;
-    background-image: url(../images/1111204.jpg);
+    background-image: url(../images/DALL·E\ 2024-04-08\ 11.19.10\ -\ In\ a\ spacious\ workshop\ filled\ with\ sunlight\,\ a\ cheerful\ Asian\ man\ in\ his\ 40s\ with\ a\ round\ face\,\ slightly\ thinning\ hair\,\ and\ glasses\ is\ joyfully\ intera.webp);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
