--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,12 @@ body {
   width: 300px;
 }
 
+.proto {
+  border-radius: 15px;
+  height: 300px;
+  width: 300px;
+}
+
 
 .EA {
   font-size: 36px;
