--- a/helpme/css/chstyle.css
+++ b/helpme/css/chstyle.css
@@ -50,8 +50,26 @@ button {
   background-color: #fff;
   color: #2589d0;
   font-size: 1em;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2), 0 0 40px rgba(128, 128, 128, 0.1) ;
+  transition: all .3s;
 }
 
+#start-btn:hover {
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.4), 0 0 50px rgba(128, 128, 128, 0.1) ;
+  border-color: transparent;
+}
+#stop-btn:hover {
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.4), 0 0 50px rgba(128, 128, 128, 0.1) ;
+  border-color: transparent;
+}
+#reset-btn:hover {
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.4), 0 0 50px rgba(128, 128, 128, 0.1) ;
+  border-color: transparent;
+}
+#copy-btn:hover {
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.4), 0 0 50px rgba(128, 128, 128, 0.1) ;
+  border-color: transparent;
+}
 .button-container {
   display: flex;
   justify-content: center;  /* ボタンを中央寄せにする */
