--- a/doyolab/doyolab.css/withal.css
+++ b/doyolab/doyolab.css/withal.css
@@ -1,3 +1,16 @@
+logo img{
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover; /* 画像のトリミング */
+}
+
+logotohome img{
+  border-radius: 70%;
+  width: 70px;
+  height: 70px;
+  object-fit: cover; /* 画像のトリミング */
+}
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -91,4 +104,31 @@ iframe {
 .heading-21::after {
   bottom: -11px;
   background-color: #fff;
+}
+img {
+  max-width: 40%;
+  height: auto;
+  margin-bottom: 20px;
+}
+.back-to-top {
+  position: fixed;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  bottom: 20px;
+  right: 20px;
+  width: 150px;
+  height: 50px;
+  background-color: #2589d0;
+  color: #fff;
+  border-radius: 25px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  line-height: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+.back-to-top:hover {
+  background-color: #1b6ca8;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
