--- a/doyolab/doyolab.css/mesh.css
+++ b/doyolab/doyolab.css/mesh.css
@@ -138,3 +138,37 @@ img {
   background-color: #1b6ca8;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
+
+/* スライドショーのスタイル */
+.marquee {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 300px; /* 画像の高さを調整 */
+}
+
+.marquee-content {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee 30s linear infinite; /* アニメーションの時間を30秒に設定 */
+}
+
+.marquee-content img {
+  padding-top: 60px;
+  width: 300px; /* 画像の幅を統一 */
+  height: auto;
+  margin-right: 20px; /* 画像間の余白 */
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.reference-link{
+padding-top: 20px;
+}
